--- a/ppas/20190323/201903023_01.md
+++ b/ppas/20190323/201903023_01.md
@@ -39,6 +39,40 @@ SQL>
 
 
 ### 二、转换规则
+**TZ_OFFSET时区函数转换：** PPAS可以通过pg_timezone_names视图获取时区信息，如：
+```
+edb=# select * from pg_timezone_names limit 10;
+              name              | abbrev | utc_offset | is_dst 
+--------------------------------+--------+------------+--------
+ Zulu                           | UTC    | 00:00:00   | f
+ America/North_Dakota/New_Salem | CDT    | -05:00:00  | t
+ America/North_Dakota/Beulah    | CDT    | -05:00:00  | t
+ America/North_Dakota/Center    | CDT    | -05:00:00  | t
+ America/Resolute               | CDT    | -05:00:00  | t
+ America/Hermosillo             | MST    | -07:00:00  | f
+ America/Santarem               | -03    | -03:00:00  | f
+ America/Detroit                | EDT    | -04:00:00  | t
+ America/Thule                  | ADT    | -03:00:00  | t
+ America/Blanc-Sablon           | AST    | -04:00:00  | f
+(10 rows)
+
+edb=# 
+```
+要实现tz_offset同类的功能，自定义一个函数即可：
+```
+CREATE OR REPLACE FUNCTION tz_offset(text) RETURNS interval AS
+$$
+	SELECT utc_offset::interval FROM PG_TIMEZONE_NAMES WHERE name=$1 limit 1;
+$$ LANGUAGE SQL STRICT;
+
+edb=# SELECT TZ_OFFSET('US/Eastern'),TZ_OFFSET('Asia/Shanghai') FROM DUAL;
+ tz_offset | tz_offset 
+-----------+-----------
+ -04:00:00 | 08:00:00
+(1 row)
+
+edb=# 
+```
 
 
 ### 三、参考链接
