--- a/ppas/20190323/201903023_01.md
+++ b/ppas/20190323/201903023_01.md
@@ -74,6 +74,8 @@ edb=# SELECT TZ_OFFSET('US/Eastern'),TZ_OFFSET('Asia/Shanghai') FROM DUAL;
 edb=# 
 ```
 
+**FROM_TZ时区函数转换：** 
+
 
 ### 三、参考链接
 1.[https://docs.oracle.com/cd/B19306_01/server.102/b14200/functions202.htm](https://docs.oracle.com/cd/B19306_01/server.102/b14200/functions202.htm)
