--- a/ppas/20190323/201903023_01.md
+++ b/ppas/20190323/201903023_01.md
@@ -8,12 +8,12 @@
 ![tz_offset基本语法](https://docs.oracle.com/cd/B19306_01/server.102/b14200/img/tz_offset.gif)
 
 ```
--- 返回从UTC到 'US/Eastern' 和 'Asia/Shanghai' 时区的偏移量。
-SQL> SELECT TZ_OFFSET('US/Eastern'),TZ_OFFSET('Asia/Shanghai') FROM DUAL;
+-- 返回从UTC到 'America/Los_Angeles' 和 'Asia/Shanghai' 时区的偏移量。
+SQL> SELECT TZ_OFFSET('America/Los_Angeles'),TZ_OFFSET('Asia/Shanghai') FROM DUAL;
 
 TZ_OFFS TZ_OFFS
 ------- -------
--04:00  +08:00
+-07:00  +08:00
 
 SQL> 
 ```
@@ -63,10 +63,10 @@ $$
 	SELECT utc_offset::interval FROM PG_TIMEZONE_NAMES WHERE name=$1 limit 1;
 $$ LANGUAGE SQL STRICT;
 
-edb=# SELECT TZ_OFFSET('US/Eastern'),TZ_OFFSET('Asia/Shanghai') FROM DUAL;
+edb=# SELECT TZ_OFFSET('America/Los_Angeles'),TZ_OFFSET('Asia/Shanghai') FROM DUAL;
  tz_offset | tz_offset 
 -----------+-----------
- -04:00:00 | 08:00:00
+ -07:00:00 | 08:00:00
 (1 row)
 
 edb=# 
