--- a/ppas/20190615/20190615_01.md
+++ b/ppas/20190615/20190615_01.md
@@ -1,4 +1,13 @@
-## Oracle 透明网关（Gateway）dg4odbc 异构访问PostgreSQL/PPAS/EDB（数据库连接DBLINK）
+## Oracle 透明网关（Gateway）dg4odbc 异构DBLINK访问PostgreSQL/PPAS/EDB
 ---
 
 ### 一、背景介绍
+迁移Oracle到目标库PostgreSQL/PPAS/EDB后，经常会Oracle远程访问PostgreSQL/PPAS/EDB的需求。而Oracle的透明网关方便我们实现异构数据库之间的跨库访问（即：DBLINK）。具体可以参考：[Oracle Database Gateways](https://www.oracle.com/technetwork/database/gateways/index.html)。这里仅仅介绍Oracle异构访问PostgreSQL/PPAS/EDB数据库，通过Oracle Database Gateway for ODBC（即：dg4odbc） 的方式进行实现。
+
+### 二、环境介绍
++ 源端（ORACLE）
+  
++ 目标库（PostgreSQL/PPAS/EDB）
+  
+
+### 三、
