--- a/ppas/20190615/20190615_01.md
+++ b/ppas/20190615/20190615_01.md
@@ -2,12 +2,13 @@
 ---
 
 ### 一、背景介绍
-迁移Oracle到目标库PostgreSQL/PPAS/EDB后，经常会Oracle远程访问PostgreSQL/PPAS/EDB的需求。而Oracle的透明网关方便我们实现异构数据库之间的跨库访问（即：DBLINK）。具体可以参考：[Oracle Database Gateways](https://www.oracle.com/technetwork/database/gateways/index.html)。这里仅仅介绍Oracle异构访问PostgreSQL/PPAS/EDB数据库，通过Oracle Database Gateway for ODBC（即：dg4odbc） 的方式进行实现。
+迁移Oracle到目标库PostgreSQL/PPAS/EDB后，经常会有Oracle远程访问PostgreSQL/PPAS/EDB的需求。而**Oracle的透明网关**为我们实现异构数据库之间的跨库访问（即：DBLINK）提供了可能。具体可以参考：[Oracle Database Gateways](https://www.oracle.com/technetwork/database/gateways/index.html)。这里仅仅介绍Oracle通过Oracle Database Gateway for ODBC（即：dg4odbc） 的方式实现异构访问PostgreSQL/PPAS/EDB数据库。
 
 ### 二、环境介绍
 + 源端（ORACLE）
-  
+  + 版本：11.2.0.4
 + 目标库（PostgreSQL/PPAS/EDB）
+  + 版本：PostGreSQL 10
   
 
 ### 三、
