--- a/ppas/20190615/20190615_01.md
+++ b/ppas/20190615/20190615_01.md
@@ -7,8 +7,9 @@
 ### 二、环境介绍
 + 源端（ORACLE）
   + 版本：11.2.0.4
+  + 字符集：NLS_LANG=AMERICAN_AMERICA.AL32UTF8
 + 目标库（PostgreSQL/PPAS/EDB）
   + 版本：PostgreSQL 10
-  
+  + 字符集：UTF8
 
 ### 三、
