--- a/ppas/20190615/20190615_01.md
+++ b/ppas/20190615/20190615_01.md
@@ -12,4 +12,12 @@
   + 版本：PostgreSQL 10
   + 字符集：UTF8
 
-### 三、
+### 三、安装Oracle Database Gateway
+
+
+
+### 四、安装部署Oracle Database Gateway for ODBC（即：dg4odbc）
+
+
+
+### 五、参考链接
