--- a/ppas/20190615/20190615_01.md
+++ b/ppas/20190615/20190615_01.md
@@ -13,7 +13,11 @@
   + **字符集**：UTF8
 
 ### 三、安装Oracle Database Gateway
-
+1. **安装方式**
+  + **Gateway部署与ORACLE数据库在不同主机上**
+  + **Gateway部署与ORACLE数据库在相同主机上**
+    + 
+    + 
 
 
 ### 四、安装部署Oracle Database Gateway for ODBC（即：dg4odbc）
