--- a/ppas/20190615/20190615_01.md
+++ b/ppas/20190615/20190615_01.md
@@ -16,8 +16,8 @@
 1. **安装方式**
   + **Gateway部署与ORACLE数据库在不同主机上**
   + **Gateway部署与ORACLE数据库在相同主机上**
-    + 
-    + 
+    + **Gateway和Database具有不同的ORACLE_HOME**
+    + **Gateway和Database具有相同的ORACLE_HOME（前提条件：数据库和Gateway必须是相同release级别）**
 
 
 ### 四、安装部署Oracle Database Gateway for ODBC（即：dg4odbc）
