--- a/ppas/20190615/20190615_01.md
+++ b/ppas/20190615/20190615_01.md
@@ -19,6 +19,13 @@
     + **Gateway和Database具有不同的ORACLE_HOME**
     + **Gateway和Database具有相同的ORACLE_HOME（前提条件：数据库和Gateway必须是相同release级别）**
 
+2. **安装方法**
+  + **交互式安装（OUI图形界面模式）**：建议图形化安装。
+  + **Response文件自动安装**
+    + **静默安装**：所有信息在Response文件中指定。没有图形化，建议静默方式安装。
+    + **Suppressed模式安装**：部分信息在Response文件中指定。
+ 
+3. **1111**
 
 ### 四、安装部署Oracle Database Gateway for ODBC（即：dg4odbc）
 
