--- a/ppas/20190615/20190615_01.md
+++ b/ppas/20190615/20190615_01.md
@@ -21,7 +21,7 @@
 
 2. **安装方法**
   + **交互式安装（OUI图形界面模式）**：建议图形化安装。
-  + **Response文件自动安装**
+  + **Response文件自动安装**：详情参考：[Response文件非交互式安装](https://docs.oracle.com/cd/E11882_01/gateways.112/e12013/app_nonint.htm#OTGIS180)
     + **静默安装**：所有信息在Response文件中指定。没有图形化，建议静默方式安装。
     + **Suppressed模式安装**：部分信息在Response文件中指定。
  
