--- a/ppas/20190615/20190615_01.md
+++ b/ppas/20190615/20190615_01.md
@@ -25,7 +25,7 @@
     + **静默安装**：所有信息在Response文件中指定。没有图形化，建议静默方式安装。
     + **Suppressed模式安装**：部分信息在Response文件中指定。
  
-3. **1111**
+3. **Gateway 不支持升级操作**
 
 ### 四、安装部署Oracle Database Gateway for ODBC（即：dg4odbc）
 
