--- a/ppas/20190615/20190615_01.md
+++ b/ppas/20190615/20190615_01.md
@@ -17,7 +17,7 @@
   + **Gateway部署与ORACLE数据库在不同主机上**
   + **Gateway部署与ORACLE数据库在相同主机上**
     + **Gateway和Database具有不同的ORACLE_HOME**
-    + **Gateway和Database具有相同的ORACLE_HOME（前提条件：数据库和Gateway必须是相同release级别）**
+    + **Gateway和Database具有相同的ORACLE_HOME**：前提条件：数据库和Gateway必须是相同release级别
 
 2. **安装方法**
   + **交互式安装（OUI图形界面模式）**：建议图形化安装。
