--- a/ppas/20190805/20190805_01.md
+++ b/ppas/20190805/20190805_01.md
@@ -2,9 +2,41 @@
 ---
 
 ### 一、背景介绍
+索引组织表(index-organized table),简写：IOT表。索引结构是B-tree，普通堆表的数据存储是无序的。但是IOT表的是按照主键PK的顺序存储数据在索引的叶子节点中的。
+每个索引叶子块，不仅包含主键数据，还包含非键值列数据。
+
 
 ### 二、转换规则
+**1. ORACLE数据库**
+```
+-- 创建索引组织表
+SQL> CREATE TABLE TAB_IOT (
+	EVENT_ID NUMBER,
+	EVENT_CODE VARCHAR2(10) NOT NULL, 
+	EVENT_DESCIPTION VARCHAR2(200),
+	EVENT_TIME DATE NOT NULL,
+	CONSTRAINT PK_EVENT_ID PRIMARY KEY(EVENT_ID)) 
+ORGANIZATION INDEX;
 
+-- EVENT_ID主键值的插入是无序的
+SQL> INSERT INTO TAB_IOT VALUES(9, 'EVNT-A1-10', 'Critical', '01-JAN-2017'); 
+SQL> INSERT INTO TAB_IOT VALUES(1, 'EVNT-C1-09', 'Warning', '01-JAN-2017'); 
+SQL> INSERT INTO TAB_IOT VALUES(7, 'EVNT-E1-14', 'Critical', '01-JAN-2017');
+SQL> COMMIT;
+
+-- 查询的结果是按照主键EVENT_ID排好序了
+SQL> SELECT * FROM TAB_IOT;
+  EVENT_ID EVENT_CODE EVENT_DESCIPTION                         EVENT_TIM
+---------- ---------- ---------------------------------------- ---------
+         1 EVNT-C1-09 Warning                                  01-JAN-17
+         7 EVNT-E1-14 Critical                                 01-JAN-17
+         9 EVNT-A1-10 Critical                                 01-JAN-17
+
+```
+
+**2. PPAS/PG数据库**
+```
+```
 ### 三、参考链接
 1.[https://docs.oracle.com/cd/E25054_01/server.1111/e25789/indexiot.htm](https://docs.oracle.com/cd/E25054_01/server.1111/e25789/indexiot.htm)
 
