--- a/ppas/20190805/20190805_01.md
+++ b/ppas/20190805/20190805_01.md
@@ -2,9 +2,23 @@
 ---
 
 ### 一、背景介绍
++ ORACLE数据库
 索引组织表(index-organized table),简写：IOT表。索引结构是B-tree，普通堆表的数据存储是无序的。但是IOT表的是按照主键PK的顺序存储数据在索引的叶子节点中的。
 每个索引叶子块，不仅包含主键数据，还包含非键值列数据。
 
+**语法**
+```
+
+```
+
++ PPAS/PG数据库
+PG不直接支持IOT，但是可以CLUSTER语法实现类似的功能，CLUSTER语法指定表按照某个特性索引排序，当前主键也是可以的。与ORACLE不同的时，ORACLE的IOT表的数据是持久化排序的。但是PG的CLUSTER语法并不能保证持久化排序，而是一次性操作，当后续对表进行DML操作时，表的数据就变的无序了，因此需要在每次使用前，对表执行CLUSTER操作。
+
+**语法**
+```
+CLUSTER [VERBOSE] table_name [ USING index_name ]
+CLUSTER [VERBOSE]
+```
 
 ### 二、转换规则
 **1. ORACLE数据库**
