--- a/ppas/20190805/20190805_01.md
+++ b/ppas/20190805/20190805_01.md
@@ -50,6 +50,52 @@ SQL> SELECT * FROM TAB_IOT;
 
 **2. PPAS/PG数据库**
 ```
+-- 创建普通表
+oomdb=> CREATE TABLE tab_iot (
+	EVENT_ID NUMERIC,
+	EVENT_CODE VARCHAR(10) NOT NULL, 
+	EVENT_DESCIPTION VARCHAR(200),
+	EVENT_TIME DATE NOT NULL,
+	CONSTRAINT PK_EVENT_ID PRIMARY KEY(EVENT_ID));
+
+-- 插入数据
+oomdb=> INSERT INTO tab_iot VALUES(9, 'EV-A1-10', 'Critical', '01-JAN-2017');
+oomdb=> INSERT INTO tab_iot VALUES(1, 'EV-C1-09', 'Warning', '01-JAN-2017');
+oomdb=> INSERT INTO tab_iot VALUES(7, 'EV-E1-14', 'Critical', '01-JAN-2017');
+
+-- 操作数据按照主键排序
+oomdb=> CLUSTER tab_iot USING PK_EVENT_ID; 
+
+oomdb=> SELECT * FROM tab_iot;
+ event_id | event_code | event_desciption |     event_time     
+----------+------------+------------------+--------------------
+        1 | EV-C1-09   | Warning          | 01-JAN-17 00:00:00
+        7 | EV-E1-14   | Critical         | 01-JAN-17 00:00:00
+        9 | EV-A1-10   | Critical         | 01-JAN-17 00:00:00
+(3 rows)
+
+-- 再次插入数据后，数据变的无序了
+oomdb=> INSERT INTO tab_iot VALUES(2, 'EV-E2-02', 'Warning', '01-JAN-2017');
+oomdb=> SELECT * FROM tab_iot;
+ event_id | event_code | event_desciption |     event_time     
+----------+------------+------------------+--------------------
+        1 | EV-C1-09   | Warning          | 01-JAN-17 00:00:00
+        7 | EV-E1-14   | Critical         | 01-JAN-17 00:00:00
+        9 | EV-A1-10   | Critical         | 01-JAN-17 00:00:00
+        2 | EV-E2-02   | Warning          | 01-JAN-17 00:00:00
+(4 rows)
+
+-- 重新按照主键排序
+oomdb=> CLUSTER tab_iot USING PK_EVENT_ID; 
+
+oomdb=> SELECT * FROM tab_iot;
+ event_id | event_code | event_desciption |     event_time     
+----------+------------+------------------+--------------------
+        1 | EV-C1-09   | Warning          | 01-JAN-17 00:00:00
+        2 | EV-E2-02   | Warning          | 01-JAN-17 00:00:00
+        7 | EV-E1-14   | Critical         | 01-JAN-17 00:00:00
+        9 | EV-A1-10   | Critical         | 01-JAN-17 00:00:00
+(4 rows)
 ```
 ### 三、参考链接
 1. [https://docs.oracle.com/cd/E25054_01/server.1111/e25789/indexiot.htm](https://docs.oracle.com/cd/E25054_01/server.1111/e25789/indexiot.htm)
