--- a/ppas/20190805/20190805_01.md
+++ b/ppas/20190805/20190805_01.md
@@ -12,7 +12,7 @@
 ```
 
 + **PPAS/PG数据库：**
-PG不直接支持IOT，但是可以CLUSTER语法实现类似的功能，CLUSTER语法指定表按照某个特性索引排序，当前主键也是可以的。与ORACLE不同的时，ORACLE的IOT表的数据是持久化排序的。但是PG的CLUSTER语法并不能保证持久化排序，而是一次性操作，当后续对表进行DML操作时，表的数据就变的无序了，因此需要在每次使用前，对表执行CLUSTER操作。
+PG不直接支持IOT，但是可以CLUSTER语法实现类似的功能，CLUSTER语法指定表按照某个特性索引排序，当前主键也是可以的。与ORACLE不同的时，ORACLE的IOT表的数据是持久化排序的。但是PG的CLUSTER语法并不能保证持久化排序，而是一次性操作，当后续对表进行DML操作时，表的数据就变的无序了，因此需要在每次使用前，对表执行CLUSTER操作或者考虑调整表fillfactor属性低于100%。执行CLUSTER语法时，会获取ACCESS EXCLUSIVE锁，阻塞READ和WRITE操作。
 
 **语法**
 ```
