--- a/ppas/20190805/20190805_02.md
+++ b/ppas/20190805/20190805_02.md
@@ -2,9 +2,21 @@
 ---
 
 ### 一、背景介绍
+BFILE数据类型是LOB类型中的一种，存放指向OS文件的指针，最大存储4GB。主要用来存储非结构化数据，如：text, image, video, and spatial data等。BFILE字段只支持只读访问。通常使用BFILENMAE函数操作该类型，并通过DBMS_LOB 包 和 Oracle Call Interface (OCI)接口来访问文件数据。
+
+**BFILENAME语法**
+```
+
+```
+
+
+
+
 
 ### 二、转换规则
 
+
 ### 三、参考链接
-1. []()
-2. [https://github.com/darold/external_file](https://github.com/darold/external_file)
+1. [https://docs.oracle.com/cd/E11882_01/server.112/e41084/sql_elements001.htm#SQLRF0021](https://docs.oracle.com/cd/E11882_01/server.112/e41084/sql_elements001.htm#SQLRF0021)
+2. [https://docs.oracle.com/cd/E11882_01/appdev.112/e18294/adlob_bfile_ops.htm#ADLOB012](https://docs.oracle.com/cd/E11882_01/appdev.112/e18294/adlob_bfile_ops.htm#ADLOB012)
+3. [https://github.com/darold/external_file](https://github.com/darold/external_file)
