--- a/ppas/20190805/20190805_02.md
+++ b/ppas/20190805/20190805_02.md
@@ -21,6 +21,7 @@ $ cd external_file-1.0
 $ make
 $ make install
 
+# Superuser用户在指定数据库oomdb创建external_file插件
 $psql
 postgres=# \c oomdb
 oomdb=# CREATE EXTENSION external_file;
