--- a/ppas/20190805/20190805_02.md
+++ b/ppas/20190805/20190805_02.md
@@ -32,6 +32,71 @@ oomdb=#
 ### 二、转换规则
 **1. ORACLE数据库**
 ```
+-- 1. 创建数据库目录
+$ /home/oracle/bfile_dir
+
+SQL> create or replace directory bfile_dir as '/home/oracle/bfile_dir';
+
+Directory created.
+
+SQL> grant read,write on directory bfile_dir to public;
+
+Grant succeeded.
+
+--2.  在/home/oracle/bfile_dir目录下编辑文件
+$ cat bfile.txt 
+This is a bfile test file!
+abcd1234
+efgh5678
+$
+
+-- 3. 建表并初始化数据
+SQL> create table tab_bfile(id number,bfile_name bfile);
+
+Table created.
+
+SQL> insert into tab_bfile values(1,BFILENAME('BFILE_DIR','bfile.txt'));
+
+1 row created.
+
+SQL> commit;
+
+Commit complete.
+
+SQL> select * from tab_bfile;
+
+        ID BFILE_NAME
+---------- ------------------------------------------------------------
+         1 bfilename('BFILE_DIR', 'bfile.txt')
+
+SQL> 
+
+-- 4. 读取数据
+SQL> set serveroutput on;
+SQL> declare
+  2     buff raw(2000);
+  3     amount int;
+  4     offset int := 1;
+  5     lob_loc bfile;
+  6  begin
+  7     select bfile_name into lob_loc from tab_bfile where id=1;
+  8     dbms_lob.fileopen(lob_loc, 0);                          --打开BFILE文件
+  9     amount := dbms_lob.getlength(lob_loc);                  --获取文件大小
+ 10     dbms_lob.read(lob_loc, amount, offset, buff);           --读取文件内容
+ 11     dbms_lob.fileclose(lob_loc);                            --关闭BFILE文件
+ 12     -- dbms_output.put_line(buff);                             --打印RAW
+ 13     dbms_output.put_line(utl_raw.cast_to_varchar2(buff));   --转换RAW为CHAR，并打印
+ 14  end;
+ 15  /
+This is a bfile test file!
+abcd1234
+efgh5678
+
+
+
+PL/SQL procedure successfully completed.
+
+SQL> 
 ```
 
 **2. PPAS/PG数据库**
