--- a/ppas/20190805/20190805_02.md
+++ b/ppas/20190805/20190805_02.md
@@ -27,6 +27,14 @@ postgres=# \c oomdb
 oomdb=# CREATE EXTENSION external_file;
 CREATE EXTENSION
 oomdb=#
+
+-- 默认插件的所有对象都创建在external_file这个SCHEMA下，可以通过修改external_file.control文件设置对象存储的SCHEMA。
+-- 建议将此SCHEMA包含在默认的search_path路径中，如：
+ALTER DATABASE <mydb> SET search_path="$user",public,external_file;
+
+或者
+GRANT USAGE ON SCHEMA external_file TO <username>;
+
 ```
 
 ### 二、转换规则
