--- a/ppas/20190805/20190805_02.md
+++ b/ppas/20190805/20190805_02.md
@@ -36,6 +36,16 @@ ALTER DATABASE <mydb> SET search_path="$user",public,external_file;
 或者
 GRANT USAGE ON SCHEMA external_file TO <username>;
 
+-- 主要函数如下：
+world=> \df
+                                                List of functions
+    Schema     |       Name       | Result data type |                 Argument data types                 | Type 
+---------------+------------------+------------------+-----------------------------------------------------+------
+ external_file | copyefile        | void             | src efile, dest efile                               | func
+ external_file | efile_check_role | trigger          |                                                     | func
+ external_file | getefilepath     | text             | e_file efile, need_read boolean, need_write boolean | func
+ external_file | readefile        | bytea            | e_file efile, OUT p_result bytea                    | func
+ external_file | writeefile       | void             | buffer bytea, e_file efile                          | func
 ```
 
 ### 二、转换规则
