--- a/ppas/20190805/20190805_02.md
+++ b/ppas/20190805/20190805_02.md
@@ -37,7 +37,7 @@ ALTER DATABASE <mydb> SET search_path="$user",public,external_file;
 GRANT USAGE ON SCHEMA external_file TO <username>;
 
 -- 主要函数如下：
-world=> \df
+oomdb=> \df
                                                 List of functions
     Schema     |       Name       | Result data type |                 Argument data types                 | Type 
 ---------------+------------------+------------------+-----------------------------------------------------+------
@@ -120,6 +120,44 @@ SQL>
 
 **2. PPAS/PG数据库**
 ```
+-- 1.安全原因，只有Superuser用户可以对目录定义执行 insert, update, delete等操作，也可以授权于普通用户，但是不推荐
+
+INSERT INTO external_file.directories(directory_name,directory_path) VALUES ('bfile_dir','/home/postgres/bfile_dir/');
+
+-- 2. 指定可以操作目录的用户（如：oomdb）以及read，write操作权限
+
+INSERT INTO external_file.directory_roles(directory_name,directory_role,directory_read,directory_write) VALUES ('bfile_dir','oomdb',true,false);
+
+-- 3. 编辑文件
+$ vi /home/postgres/bfile_dir/bfile.txt
+This is a bfile test file!
+abcd1234
+efgh5678
+
+-- 4. 建表并初始化数据
+oomdb=>  set search_path to oomdb,external_file,public;
+
+oomdb=> CREATE TABLE tab_bfile(id int primary key, bfile_name efile);
+CREATE TABLE
+
+
+oomdb=> INSERT INTO tab_bfile VALUES (1,('bfile_dir','bfile.txt'));
+INSERT 0 1
+oomdb=> select * from tab_bfile;
+ id |      bfile_name       
+----+-----------------------
+  1 | (bfile_dir,bfile.txt)
+(1 row)
+
+-- 5. 读取数据
+oomdb=> select id,bfile_name,encode(readefile(bfile_name),'escape') from tab_bfile;
+ id |      bfile_name       |           encode           
+----+-----------------------+----------------------------
+  1 | (bfile_dir,bfile.txt) | This is a bfile test file!+
+    |                       | abcd1234                  +
+    |                       | efgh5678                  +
+    |                       | 
+(1 row)
 ```
 
 ### 三、参考链接
