--- a/ppas/20190806/20190806_01.md
+++ b/ppas/20190806/20190806_01.md
@@ -4,6 +4,13 @@
 ### 一、背景介绍
 
 ### 二、转换规则
+**1.ORACLE数据库**
+```
+```
+
+**2. PPAS/PG数据库**
+```
+```
 
 ### 三、参考链接
 1. [https://docs.oracle.com/cd/E11882_01/server.112/e22490/et_concepts.htm#SUTIL011](https://docs.oracle.com/cd/E11882_01/server.112/e22490/et_concepts.htm#SUTIL011)
