--- a/ppas/20190806/20190806_01.md
+++ b/ppas/20190806/20190806_01.md
@@ -2,6 +2,34 @@
 ---
 
 ### 一、背景介绍
+**ORACLE数据库**
+External Tables特性是SQL*Loader功能的一种补充，访问外部资源数据，就如同访问数据库中的表一样。
+**基本语法**
+```
+CREATE TABLE table_name (
+	......
+)
+ORGANIZATION EXTERNAL
+(TYPE ORACLE_LOADER|ORACLE_DATAPUMP
+ DEFAULT DIRECTORY ...
+ ACCESS PARAMETERS (
+ 	......
+ )
+ LOCATION ......
+);
+```
+参数说明
++ TYPE：指定外部表类型：主要有 ORACLE_LOADER 和 ORACLE_DATAPUMP 两种
+	+ ORACLE_LOADER：默认的访问驱动，从外部表加载数据到内部表，只能只读方式实现文本数据的装载。数据必须来自**文本文件（text）**，而且不能执行unload操作（即：数据库从internal表到external表）。
+	+ ORACLE_DATAPUMP：该驱动可以执行load和unload操作。数据必须为**二进制dump文件**。
+
++ DEFAULT DIRECTORY：文件默认存放的数据库目录。
+
++ ACCESS PARAMETERS：可选的，每个access driver特性的access parameters。
+
++ LOCATION：指定外部表的文件名。格式为：directory:file，其中，directory是可选的，如果忽略，则选择DEFAULT DIRECTORY的设置目录。
+
+
 
 ### 二、转换规则
 **1.ORACLE数据库**
