--- a/ppas/20190806/20190806_01.md
+++ b/ppas/20190806/20190806_01.md
@@ -3,6 +3,7 @@
 
 ### 一、背景介绍
 **ORACLE数据库**
+
 External Tables特性是SQL*Loader功能的一种补充，访问外部资源数据，就如同访问数据库中的表一样。
 **基本语法**
 ```
@@ -29,6 +30,8 @@ ORGANIZATION EXTERNAL
 
 + **LOCATION**：指定外部表的文件名。格式为：directory:file，其中，directory是可选的，如果忽略，则选择DEFAULT DIRECTORY的设置目录。
 
+
+**PPAS/PG数据库**
 
 
 ### 二、转换规则
