--- a/ppas/20190806/20190806_01.md
+++ b/ppas/20190806/20190806_01.md
@@ -38,6 +38,71 @@ ORGANIZATION EXTERNAL
 ### 二、转换规则
 **1.ORACLE数据库**
 ```
+-- 创建数据库目录
+$ mkdir -p /home/oracle/external_dir
+SQL> create or replace directory external_dir as '/home/oracle/external_dir';
+SQL> grant read,write on directory external_dir  to public;
+
+-- 1. ORACLE_LOADER 装载数据
+-- 1.1.在/home/oracle/external_dir下创建info.dat文本文件
+$ cat info.dat 
+"7369","SMITH","CLERK","7902","17-DEC-80","100","0","20"
+"7499","ALLEN","SALESMAN","7698","20-FEB-81","250","0","30"
+"7521","WARD","SALESMAN","7698","22-FEB-81","450","0","30"
+"7566","JONES","MANAGER","7839","02-APR-81","1150","0","20"
+"7654","MARTIN","SALESMAN","7698","28-SEP-81","1250","0","30"
+"7698","BLAKE","MANAGER","7839","01-MAY-81","1550","0","30"
+"7934","MILLER","CLERK","7782","23-JAN-82","3500","0","10"
+
+-- 1.2. 创建外部表 emp_load 
+SQL> conn oomdb/oracle
+Connected.
+SQL> create table emp_load(
+                    emp_id number(4),
+                    ename varchar2(15),
+                    job varchar2(12),
+                    mgr_id number(4),
+                    hiredate date,
+                    salary number(8),
+                    comm number(8),
+                    dept_id number(2)
+                    )
+            organization external
+                    (type oracle_loader
+                     default directory external_dir
+                     access parameters(
+                                    records delimited by newline
+                                    badfile 'emp_load%a_%p.bad'
+                                    logfile 'emp_load%a_%p.log'
+                                    fields terminated by ','
+                                    optionally enclosed by '"'
+                                    lrtrim missing field values are null
+                                    reject rows with all null fields
+                                    )
+                     location ('info.dat')
+)
+parallel 
+reject limit unlimited;
+
+
+-- 1.3.查询验证文本文件数据是否load到内部表emp
+SQL> SELECT * FROM emp_load;
+
+    EMP_ID ENAME           JOB              MGR_ID HIREDATE      SALARY       COMM    DEPT_ID
+---------- --------------- ------------ ---------- --------- ---------- ---------- ----------
+      7369 SMITH           CLERK              7902 17-DEC-80        100          0         20
+      7499 ALLEN           SALESMAN           7698 20-FEB-81        250          0         30
+      7521 WARD            SALESMAN           7698 22-FEB-81        450          0         30
+      7566 JONES           MANAGER            7839 02-APR-81       1150          0         20
+      7654 MARTIN          SALESMAN           7698 28-SEP-81       1250          0         30
+      7698 BLAKE           MANAGER            7839 01-MAY-81       1550          0         30
+      7934 MILLER          CLERK              7782 23-JAN-82       3500          0         10
+
+7 rows selected.
+
+SQL> 
+
+
 ```
 
 **2. PPAS/PG数据库**
