--- a/ppas/20190806/20190806_01.md
+++ b/ppas/20190806/20190806_01.md
@@ -102,7 +102,87 @@ SQL> SELECT * FROM emp_load;
 
 SQL> 
 
+-- 2. ORACLE_DATAPUMP 装载和卸载数据
+-- 2.1. unload卸载数据
+SQL> create table tab_unload
+(ename,
+ job,
+ sal,
+ dname)
+organization external
+(type oracle_datapump 
+ default directory external_dir 
+ location('tab_unload')
+)
+parallel 1
+as 
+select e.ename,e.job,e.sal,d.dname 
+from scott.emp e
+join scott.dept d
+on e.deptno=d.deptno;
 
+SQL> set lines 200 pages 1000
+SQL> select * from tab_unload;
+
+ENAME      JOB              SAL DNAME
+---------- --------- ---------- --------------
+CLARK      MANAGER         2450 ACCOUNTING
+KING       PRESIDENT       5000 ACCOUNTING
+MILLER     CLERK           1300 ACCOUNTING
+JONES      MANAGER         2975 RESEARCH
+FORD       ANALYST         3000 RESEARCH
+ADAMS      CLERK           1100 RESEARCH
+SMITH      CLERK            800 RESEARCH
+SCOTT      ANALYST         3000 RESEARCH
+WARD       SALESMAN        1250 SALES
+TURNER     SALESMAN        1500 SALES
+ALLEN      SALESMAN        1600 SALES
+JAMES      CLERK            950 SALES
+BLAKE      MANAGER         2850 SALES
+MARTIN     SALESMAN        1250 SALES
+
+14 rows selected.
+
+
+$ ll /home/oracle/external_dir/tab_unload   
+-rw-r----- 1 oracle oinstall 12288 Aug  6 20:10 /home/oracle/external_dir/tab_unload
+
+-- 2.2. load装载数据
+SQL> create table tab_load
+(ename varchar2(10),
+ job varchar2(9),
+ sal number(7,2),
+ dname varchar(14)
+)
+organization external
+(type oracle_datapump 
+ default directory external_dir 
+ location('tab_unload')
+);
+
+SQL> set lines 200 pages 1000
+SQL> select * from tab_load;
+
+ENAME      JOB              SAL DNAME
+---------- --------- ---------- --------------
+CLARK      MANAGER         2450 ACCOUNTING
+KING       PRESIDENT       5000 ACCOUNTING
+MILLER     CLERK           1300 ACCOUNTING
+JONES      MANAGER         2975 RESEARCH
+FORD       ANALYST         3000 RESEARCH
+ADAMS      CLERK           1100 RESEARCH
+SMITH      CLERK            800 RESEARCH
+SCOTT      ANALYST         3000 RESEARCH
+WARD       SALESMAN        1250 SALES
+TURNER     SALESMAN        1500 SALES
+ALLEN      SALESMAN        1600 SALES
+JAMES      CLERK            950 SALES
+BLAKE      MANAGER         2850 SALES
+MARTIN     SALESMAN        1250 SALES
+
+14 rows selected.
+
+SQL> 
 ```
 
 **2. PPAS/PG数据库**
