--- a/ppas/20190806/20190806_01.md
+++ b/ppas/20190806/20190806_01.md
@@ -33,6 +33,34 @@ ORGANIZATION EXTERNAL
 
 
 **PPAS/PG数据库：**
+PG的COPY语法实现在一个文件和一个表之间复制数据，另外file_fdw插件也实现了类似COPY的功能。
+**基本语法**
+```
+-- 数据装载load
+COPY table_name [ ( column_name [, ...] ) ]
+    FROM { 'filename' | PROGRAM 'command' | STDIN }
+    [ [ WITH ] ( option [, ...] ) ]
+
+-- 数据卸载unload
+COPY { table_name [ ( column_name [, ...] ) ] | ( query ) }
+    TO { 'filename' | PROGRAM 'command' | STDOUT }
+    [ [ WITH ] ( option [, ...] ) ]
+
+其中 option 可以是下列之一：
+
+    FORMAT format_name
+    OIDS [ boolean ]
+    FREEZE [ boolean ]
+    DELIMITER 'delimiter_character'
+    NULL 'null_string'
+    HEADER [ boolean ]
+    QUOTE 'quote_character'
+    ESCAPE 'escape_character'
+    FORCE_QUOTE { ( column_name [, ...] ) | * }
+    FORCE_NOT_NULL ( column_name [, ...] )
+    FORCE_NULL ( column_name [, ...] )
+    ENCODING 'encoding_name'
+```
 
 
 ### 二、转换规则
