--- a/ppas/20190806/20190806_01.md
+++ b/ppas/20190806/20190806_01.md
@@ -63,7 +63,10 @@ COPY { table_name [ ( column_name [, ...] ) ] | ( query ) }
     FORCE_NULL ( column_name [, ...] )
     ENCODING 'encoding_name'
 ```
-
++ **FORMAT**:支持text、csv以及二进制格式文件。
++ **导入COPY FROM**：文件或者STDIN 到表中。
++ **导出COPY TO**：导出表到 文件或者STDOUT。
++ **COPY是服务端命令，psql指令 \copy 是客户端命令。**
 
 ### 二、转换规则
 **1.ORACLE数据库**
