--- a/ppas/20190806/20190806_01.md
+++ b/ppas/20190806/20190806_01.md
@@ -224,10 +224,55 @@ SQL>
 **2. PPAS/PG数据库**
 ```
 -- 2.1. 装载数据：COPY FROM
+$ cat info.dat 
+"7369","SMITH","CLERK","7902","17-DEC-80","100","0","20"
+"7499","ALLEN","SALESMAN","7698","20-FEB-81","250","0","30"
+"7521","WARD","SALESMAN","7698","22-FEB-81","450","0","30"
+"7566","JONES","MANAGER","7839","02-APR-81","1150","0","20"
+"7654","MARTIN","SALESMAN","7698","28-SEP-81","1250","0","30"
+"7698","BLAKE","MANAGER","7839","01-MAY-81","1550","0","30"
+"7934","MILLER","CLERK","7782","23-JAN-82","3500","0","10"
+
+-- 授予oomdb用户pg_read_server_files权限
+postgres=# grant pg_read_server_files to oomdb;
+
+oomdb=# create table emp_load(
+                    emp_id number(4),
+                    ename varchar2(15),
+                    job varchar2(12),
+                    mgr_id number(4),
+                    hiredate date,
+                    salary number(8),
+                    comm number(8),
+                    dept_id number(2)
+                    );
 
 
+oomdb=# COPY emp_load FROM '/home/postgres/info.dat'
+WITH (
+	FORMAT csv,
+	DELIMITER ',',
+	quote '"',        -- 只适合csv格式
+	encoding 'UTF8'
+);
+COPY 7
 
--- 2.2. 协助数据：COPY TO
+oomdb=# select * from emp_load;
+ emp_id | ename  |   job    | mgr_id |      hiredate      | salary | comm | dept_id 
+--------+--------+----------+--------+--------------------+--------+------+---------
+   7369 | SMITH  | CLERK    |   7902 | 17-DEC-80 00:00:00 |    100 |    0 |      20
+   7499 | ALLEN  | SALESMAN |   7698 | 20-FEB-81 00:00:00 |    250 |    0 |      30
+   7521 | WARD   | SALESMAN |   7698 | 22-FEB-81 00:00:00 |    450 |    0 |      30
+   7566 | JONES  | MANAGER  |   7839 | 02-APR-81 00:00:00 |   1150 |    0 |      20
+   7654 | MARTIN | SALESMAN |   7698 | 28-SEP-81 00:00:00 |   1250 |    0 |      30
+   7698 | BLAKE  | MANAGER  |   7839 | 01-MAY-81 00:00:00 |   1550 |    0 |      30
+   7934 | MILLER | CLERK    |   7782 | 23-JAN-82 00:00:00 |   3500 |    0 |      10
+(7 rows)
+
+edb=# 
+
+-- 2.2. 卸载数据：COPY TO
+
 
 ```
 
