--- a/ppas/20190806/20190806_01.md
+++ b/ppas/20190806/20190806_01.md
@@ -273,6 +273,30 @@ edb=#
 
 -- 2.2. 卸载数据：COPY TO
 
+postgres=# grant pg_write_server_files to omdb;
+GRANT ROLE
+
+oomdb=> COPY emp_load(emp_id,ename,job,salary) TO STDOUT;
+7369    SMITH   CLERK   100
+7499    ALLEN   SALESMAN        250
+7521    WARD    SALESMAN        450
+7566    JONES   MANAGER 1150
+7654    MARTIN  SALESMAN        1250
+7698    BLAKE   MANAGER 1550
+7934    MILLER  CLERK   3500
+
+
+oomdb=>  COPY emp_load(emp_id,ename,job,salary) TO '/home/polardb/emp.out';
+COPY 7
+
+$ cat /home/postgres/emp.out 
+7369    SMITH   CLERK   100
+7499    ALLEN   SALESMAN        250
+7521    WARD    SALESMAN        450
+7566    JONES   MANAGER 1150
+7654    MARTIN  SALESMAN        1250
+7698    BLAKE   MANAGER 1550
+7934    MILLER  CLERK   3500
 
 ```
 
