--- a/ppas/20190806/20190806_01.md
+++ b/ppas/20190806/20190806_01.md
@@ -67,8 +67,8 @@ COPY { table_name [ ( column_name [, ...] ) ] | ( query ) }
 + **导入COPY FROM**：文件或者STDIN 到表中。
 + **导出COPY TO**：导出表到 文件或者STDOUT。
 + **COPY是服务端命令，psql指令 \copy 是客户端命令。**
-   + **copy命令**：
-   + **\copy命令**：
+   + **copy命令**：必须Superuser用户;文件在服务端服务器上;
+   + **\copy命令**：一般用户;文件在客户端机器上;
 
 ### 二、转换规则
 **1.ORACLE数据库**
