--- a/ppas/20190909/20190909_01.md
+++ b/ppas/20190909/20190909_01.md
@@ -2,7 +2,11 @@
 ---
 
 ### 一、背景介绍
-
+集合（collection）伪函数，只可以在SQL中使用，不能在PL/SQL中使用。主要包含以下4种函数。
++ **CAST**:
++ **COLLECT**:
++ **MULTISET**:
++ **TABLE**:
 
 ### 二、转换规则
 
