--- a/ppas/20190909/20190909_01.md
+++ b/ppas/20190909/20190909_01.md
@@ -2,11 +2,12 @@
 ---
 
 ### 一、背景介绍
-集合（collection）伪函数，只可以在SQL中使用，不能在PL/SQL中使用。主要包含以下4种函数。
-+ **CAST**:
-+ **COLLECT**:
-+ **MULTISET**:
-+ **TABLE**:
+集合（collection）伪函数（pseudofunction），只可以在SQL中使用，不能在PL/SQL中使用。主要包含以下4种函数。
++ **CAST**: 转换一个collection类型到另外一个collection类型，包括：VARRAY 到 Nested table。
++ **COLLECT**: SQL中聚集数据变成collection,10g版本引入，11.2 版本支持数据排序和去重。
++ **MULTISET**: 把table数据变成collection。其中，CAST ... MULTISET 转换数据库TABLE为集合类型(Collection-typed)列。
++ **TABLE**: 把collection数据变为table,与MULTISET相反。
+
 
 ### 二、转换规则
 
