--- a/ppas/20190909/20190909_01.md
+++ b/ppas/20190909/20190909_01.md
@@ -8,9 +8,16 @@
 + **MULTISET**: 把table数据变成collection。其中，CAST ... MULTISET 转换数据库TABLE为集合类型(Collection-typed)列。
 + **TABLE**: 把collection数据变为table,与MULTISET相反。
 
+本文主要介绍**CAST(MULTISET(subquery) AS type_name)**使用方法。
 
 ### 二、转换规则
+1.**ORACLE**
+```
+```
 
+2.**PG/PPAS**
+```
+```
 
 ### 三、参考链接
 1. [https://docs.oracle.com/cd/E11882_01/server.112/e41084/functions023.htm#SQLRF00613](https://docs.oracle.com/cd/E11882_01/server.112/e41084/functions023.htm#SQLRF00613)
