--- a/ppas/20190909/20190909_01.md
+++ b/ppas/20190909/20190909_01.md
@@ -8,7 +8,23 @@
 + **MULTISET**: 把table数据变成collection。其中，CAST ... MULTISET 转换数据库TABLE为集合类型(Collection-typed)列。
 + **TABLE**: 把collection数据变为table,与MULTISET相反。
 
-本文主要介绍**CAST(MULTISET(subquery) AS type_name)**使用方法。
+本文主要介绍 **CAST(MULTISET(subquery) AS type_name)** 使用方法，和PL/SQL的MULTISET操作符并不同。
+
+**基本语法**：
+```
+SELECT CAST(MULTISET (SELECT field FROM table) AS collection_type)
+  FROM DUAL;
+  
+ 或者
+ 
+SELECT outerfield,
+       CAST(MULTISET(SELECT field FROM whateverTable
+                      WHERE correlationCriteria
+                     )
+       AS collectionTypeName) 
+  FROM outer_table;
+ 
+```
 
 ### 二、转换规则
 1.**ORACLE**
