--- a/ppas/20190909/20190909_01.md
+++ b/ppas/20190909/20190909_01.md
@@ -66,10 +66,10 @@ INSERT INTO emp VALUES (7902,'FORD','ANALYST',7566,'03-DEC-81',3000,NULL,20);
 INSERT INTO emp VALUES (7934,'MILLER','CLERK',7782,'23-JAN-82',1300,NULL,10);
 COMMIT;
 
-
+-- 创建集合collection存放指定数据。
 CREATE TYPE typ_tab AS TABLE OF VARCHAR2(60);
 
-
+-- 查询数据
 SQL> SELECT d.dname,
        d.loc,
        CAST(MULTISET(SELECT ename
@@ -90,6 +90,7 @@ SQL>
 
 2.**PG/PPAS**
 ```
+
 ```
 
 ### 三、参考链接
