--- a/ppas/20190909/20190909_01.md
+++ b/ppas/20190909/20190909_01.md
@@ -69,12 +69,13 @@ COMMIT;
 -- 创建集合collection存放指定数据。
 CREATE TYPE typ_tab AS TABLE OF VARCHAR2(60);
 
--- 查询数据
+-- 标量子查询只允许返回单行单列。
+-- CAST(MULTISET) 允许返回多行到一个集合中。
 SQL> SELECT d.dname,
        d.loc,
        CAST(MULTISET(SELECT ename
                        FROM emp e
-                      WHERE e.deptno = d.deptno) AS typ_tab) AS coll_val
+                      WHERE e.deptno = d.deptno) AS typ_tab) AS coll_val -- 
   FROM dept d;
 
 DNAME          LOC           COLL_VAL
