--- a/ppas/20190909/20190909_01.md
+++ b/ppas/20190909/20190909_01.md
@@ -91,6 +91,22 @@ SQL>
 
 2.**PG/PPAS**
 ```
+-- 表EMP、DEPT以及类型typ_tab参考上面
+SELECT d.dname,
+       d.loc,
+       (SELECT array_agg(row(ename))
+          FROM emp e
+          WHERE e.deptno = d.deptno) AS coll_val
+  FROM dept d;
+   dname    |   loc    |                      coll_val                      
+------------+----------+----------------------------------------------------
+ ACCOUNTING | NEW YORK | {(CLARK),(KING),(MILLER)}
+ RESEARCH   | DALLAS   | {(SMITH),(JONES),(SCOTT),(ADAMS),(FORD)}
+ SALES      | CHICAGO  | {(ALLEN),(WARD),(MARTIN),(BLAKE),(TURNER),(JAMES)}
+ OPERATIONS | BOSTON   | 
+(4 rows)
+
+edb=#  
 
 ```
 
