--- a/ppas/20191010/20191010_01.md
+++ b/ppas/20191010/20191010_01.md
@@ -5,10 +5,8 @@
 在ORACLE数据库中NULL值和空字符串''是代表这一个含义，但是在PPAS/PG等数据库中，NULL值和空字符串''不完全等价。因此要做到2边完全一致，要么在内核基本实现，要么使用函数实现相同的逻辑（此方法设置的改动面比较大）。
 
 #### 主要场景
-+ 场景1. SQL语句判断null值，select * from t where name is null。  
-+ 场景2. SQL语句会写成 insert into xxx (a,b,c) values(1,2,''), 写null和''的语法都有。    
-+ 场景3. Call function(1,2,'')，函数内做is null判断，传参时null和''的语法都会存在。  
-
-
++ 场景1：SQL语句判断null值，select * from t where name is null。  
++ 场景2：SQL语句会写成 insert into xxx (a,b,c) values(1,2,''), 写null和''的语法都有。    
++ 场景3：Call function(1,2,'')，函数内做is null判断，传参时null和''的语法都会存在。  
 
 ### 二、转换规则
