--- a/ppas/20191010/20191010_01.md
+++ b/ppas/20191010/20191010_01.md
@@ -10,3 +10,11 @@
 + 场景3：Call function(1,2,'')，函数内做is null判断，传参时null和''的语法都会存在。  
 
 ### 二、转换规则
+**1. ORACLE数据库**
+```
+```
+
+
+**2. PPAS/PG数据库**
+```
+```
