--- a/ppas/20191010/20191010_01.md
+++ b/ppas/20191010/20191010_01.md
@@ -12,8 +12,55 @@
 ### 二、转换规则
 **1. ORACLE数据库**
 ```
-```
+SQL> create table tab_null(id number,name varchar2(20));
 
+Table created.
+
+SQL> insert into tab_null(id,name) values(1,'');
+
+1 row created.
+
+SQL> insert into tab_null(id,name) values(2,null);
+
+1 row created.
+
+SQL> insert into tab_null(id,name) values(3,'ccc');
+
+1 row created.
+
+SQL> commit;
+
+Commit complete.
+
+SQL> select * from tab_null;
+
+        ID NAME
+---------- --------------------
+         1
+         2
+         3 ccc
+
+-- 检索出NULL和''的数据
+SQL> select * from tab_null where name is null;
+
+        ID NAME
+---------- --------------------
+         1
+         2
+         
+-- 检索不出数据
+SQL> select * from tab_null where name = '';
+
+no rows selected
+
+SQL> 
+-- 检索不出数据
+SQL> select * from tab_null where name = null;
+
+no rows selected
+
+SQL> 
+```
 
 **2. PPAS/PG数据库**
 ```
