--- a/ppas/20191010/20191010_01.md
+++ b/ppas/20191010/20191010_01.md
@@ -64,4 +64,41 @@ SQL>
 
 **2. PPAS/PG数据库**
 ```
+oomdb=# create table tab_null(id number,name varchar2(20));
+CREATE TABLE
+oomdb=# insert into tab_null(id,name) values(1,'');
+INSERT 0 1
+oomdb=# insert into tab_null(id,name) values(2,null);
+INSERT 0 1
+oomdb=# insert into tab_null(id,name) values(3,'ccc');
+INSERT 0 1
+oomdb=# select * from tab_null;
+ id | name 
+----+------
+  1 | 
+  2 | 
+  3 | ccc
+(3 rows)
+
+-- 只能检索出null值数据
+oomdb=#  select * from tab_null where name is null;
+ id | name 
+----+------
+  2 | 
+(1 row)
+
+-- 只能检索出''值数据
+oomdb=# select * from tab_null where name = '';
+ id | name 
+----+------
+  1 | 
+(1 row)
+
+-- 检索不出数据
+oomdb=# select * from tab_null where name = null;
+ id | name 
+----+------
+(0 rows)
+
+oomdb=# 
 ```
