--- a/ppas/20191010/20191010_01.md
+++ b/ppas/20191010/20191010_01.md
@@ -102,3 +102,36 @@ oomdb=# select * from tab_null where name = null;
 
 oomdb=# 
 ```
+**因为ORACLEZ中通常使用IS NULL来判断空值，因此为了保持一致，需要把f is null 修正为 (f is null or f = '')，可以通过创建一个自定义函数check_null来实现。**
+
+```
+-- 创建 check_null 函数
+create function check_null(f text) return boolean
+is 
+begin
+  if (f is null or f = '') then
+  	return true;
+  else
+  	return false;
+  end if;
+end;
+
+
+oomdb=# select * from tab_null where name is null;
+ id | name 
+----+------
+  2 | 
+(1 row)
+
+oomdb=# select * from tab_null where check_null(name);
+ id | name 
+----+------
+  1 | 
+  2 | 
+(2 rows)
+
+oomdb=# 
+
+```
+
+
