--- a/ppas/20190909/20190909_01.md
+++ b/ppas/20190909/20190909_01.md
@@ -87,6 +87,39 @@ OPERATIONS     BOSTON        TYP_TAB()
 
 SQL>  
  
+-- 案例2:
+
+Create or replace type t_col as object (
+i number,
+n varchar2(30));
+
+Create or replace type t_nested_table as table of t_col;
+Create or replace function return_table return t_nested_table as
+v_ret t_nested_table;
+Begin
+v_ret := t_nested_table();
+
+v_ret.extend;
+v_ret(v_ret.count) := t_col(1, 'one');
+
+v_ret.extend;
+v_ret(v_ret.count) := t_col(2, 'two');
+
+v_ret.extend;
+v_ret(v_ret.count) := t_col(3, 'three');
+
+return v_ret;
+end return_table;
+select * from table(return_table);
+
+
+SQL> SELECT CAST(MULTISET(select * from table(return_table)) AS t_nested_table) multiselect FROM dual;
+
+MULTISELECT(I, N)
+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+T_NESTED_TABLE(T_COL(1, 'one'), T_COL(2, 'two'), T_COL(3, 'three'))
+
+SQL>
 ```
 
 2.**PG/PPAS**
@@ -108,6 +141,40 @@ SELECT d.dname,
 
 edb=#  
 
+--案例2：
+edb=# create or replace type t_col as object (
+edb(# i number,
+edb(# n varchar2(30));
+CREATE TYPE
+edb=#
+edb=# create or replace type t_nested_table as table of t_col;
+CREATE TYPE
+edb=# create or replace function return_table return t_nested_table as
+edb$# v_ret t_nested_table;
+edb$# begin
+edb$# v_ret := t_nested_table();
+edb$#
+edb$# v_ret.extend;
+edb$# v_ret(v_ret.count) := t_col(1, 'one');
+edb$#
+edb$# v_ret.extend;
+edb$# v_ret(v_ret.count) := t_col(2, 'two');
+edb$#
+edb$# v_ret.extend;
+edb$# v_ret(v_ret.count) := t_col(3, 'three');
+edb$#
+edb$# return v_ret;
+edb$# end return_table;
+CREATE FUNCTION
+edb=#
+edb=#
+edb=# SELECT array_agg(t_col(i,n)) FROM table(return_table);
+array_agg
+-----------------------------------
+{"(1,one)","(2,two)","(3,three)"}
+(1 row)
+
+edb=#
 ```
 
 ### 三、参考链接
